commit database and rendering id values

--- a/views/log.handlebars
+++ b/views/log.handlebars
@@ -4,7 +4,7 @@
             <form method="/" action="get">
                 <div class="form">
                     <p style="text-align:center">LOG IN</p>
-                    <input type="text" class="zocial-dribbble" placeholder="Enter owner name" name="waiterId">
+                    <input type="text" class="zocial-dribbble" placeholder="Enter owner name" name="ownerId">
                     <p style="text-align:center">OR</p>
                     <input type="text" class="zocial-dribbble" placeholder="Enter waiter name" name="waiterId">
                     <input type="submit" value="Login">
