--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -25,5 +25,9 @@
             {{/each}}
         </tbody>
     </table>
-    </div>
-   
+</div>
+<div class=''>
+    <form action="/clear" method="GET">
+        <button type="submit" name='clearWaiterShift'>Clear</button>
+    </form>
+</div>
