data is being compared in the shifts table

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,8 +6,8 @@
         <input id="{{week_day}}" name="day_id" value="{{id}}" type="checkbox">
         <label for="{{week_day}}">{{week_day}}</label>
         {{/each}}
-        <h2 class="done">WORKING</h2>
-        <h2 class="pending">Pending</h2>
+        <h2 class="done">WORKING DAYS</h2>
+        <h2 class="pending">OFF DAYS</h2>
     </div>
     <button type="submit" name="selectDays">submit</button>
     </form>
