--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href=" /CSS/style.css">
 
 <div class="container">
-    <title>Waiter-App</title>
+    <title>ᕕ(⌐■_■)ᕗ ♪♬</title>
 
     {{{body}}}
 
