--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -498,3 +498,22 @@ and also iPads specifically.
         display: -webkit-inline-box;
         margin: 3px 50px;
 }
+.orange {
+    background-color: rgb(255, 251, 0);
+    opacity: 0.7;
+
+}
+
+.green {
+    background-color: rgb(46, 197, 26);
+    opacity: 0.7;
+}
+
+.red {
+    background-color: rgb(252, 147, 147);
+    opacity: 0.7;
+}
+
+.nothing {
+    background-color: rgba(44, 44, 207, 0.281);
+}
