--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,7 +3,7 @@
     <form action="/waiter/{{username}}" method="POST">
     <div class="items">
         {{#each checklist}}
-        <input id="{{week_day}}" name="day_id" value="{{id}}" type="checkbox" {{checked}}>
+        <input id="{{week_day}}" name="day_id" value="{{id}}" type="checkbox" {{match}}>
         <label for="{{week_day}}">{{week_day}}</label>
         {{/each}}
         <h2 class="done">WORKING DAYS</h2>
