--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -26,7 +26,7 @@ body {
     -webkit-box-shadow: 0 4px 16px #aaa;
     box-shadow: 0 4px 16px #aaa;
     width: 400px;
-    /* margin-left: auto; */
+    margin: auto;
     border-top: solid 8px teal;
 }
 
@@ -414,7 +414,11 @@ a:hover {
 table {
     width: 750px;
     border-collapse: collapse;
-    /* margin-right: auto; */
+    margin-right: auto;
+    align-content: center;
+    text-align: center;
+    margin: auto;
+    width: 50%;
 }
 
 /* Zebra striping */
@@ -496,7 +500,9 @@ and also iPads specifically.
 }
 .tableBox{
         display: -webkit-inline-box;
-        margin: 3px 50px;
+        margin: auto;
+        text-align: center;
+        width: 85%;
 }
 .orange {
     background-color: rgb(255, 251, 0);
